create-section-introduction

--- a/index.html
+++ b/index.html
@@ -136,5 +136,75 @@
     </div>
 </div>
 
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 p-0">
+            <div id="slider" class="position-relative">
+                <h1 class="text-white text-capitalize" id="heading-slider">make your own world</h1>
+                <p class="text-white w-25" id="text-slider">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate molestiae incidunt voluptates possimus debitis ullam veniam facilis. Magnam, corrupti placeat.</p>
+                <ul id="button-slider">
+                    <li class="d-inline-block text-white bg-success py-3 px-4 rounded-5 text-uppercase fw-bold">
+                         about us
+                    </li>
+                    <li class="d-inline-block text-success bg-white py-3 px-4 rounded-5 text-uppercase fw-bold">
+                        contact us
+                    </li>
+                </ul>
+                
+            <img src="images/single-slide-1.webp" alt="" id="image-slider">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid" id="scholarship">
+    <div class="row p-5">
+        <div class="col-3 ">
+            <div class="card rounded-0" style="width: 23rem;" id="card1">
+                <div class="card-body p-5">
+                    <div class="float-start" style="width:120px;"><img src="images/service-1.webp" class="img-fluid" width="60%"></div>
+                    <div class=" float-start" style="width:150px">
+                    <h5 class="card-title fw-bolder text-white text-capitalize">scholarship facility</h5>
+                    <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-3 ">
+            <div class="card rounded-0" style="width: 23rem;" id="card2">
+                <div class="card-body p-5">
+                    <div class="float-start" style="width:120px;"><img src="images/service-1.webp" class="img-fluid"width="60%" > </div>
+                        <div class=" float-start" style="width:150px">
+                            <h5 class="card-title fw-bolder text-white text-capitalize">scholarship facility</h5>
+                            <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    
+                    </div>
+                </div>  
+            </div>
+            <div class="col-3 ">
+                <div class="card rounded-0" style="width: 23rem;" id="card3">
+                    <div class="card-body p-5">
+                        <div class="float-start" style="width:120px;"><img src="images/service-1.webp" class="img-fluid" width="60%" ></div>
+                            <div class=" float-start" style="width:150px">
+                                <h5 class="card-title fw-bolder text-white text-capitalize">scholarship facility</h5>
+                                <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p> 
+                            </div>
+                    </div>
+                </div>
+            </div>
+        <div class="col-3 ">
+            <div class="card rounded-0" style="width: 23rem;" id="card4">
+                <div class="card-body p-5">
+                    <div class="float-start" style="width:120px;"><img src="images/service-1.webp" class="img-fluid" width="60%" ></div>
+                        <div class=" float-start" style="width:150px">
+                            <h5 class="card-title fw-bolder text-white text-capitalize">scholarship facility</h5>
+                            <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
